@@ -1395,3 +1395,4 @@ Changed the default email folder names to Junk, Trash, Drafts, Sent and Virus.
 Added an option to the Spam and Virus Scanning page to control what happens when email is sent to a mailbox that is over quota (bouncing or queueing for later).
 ---- Changes since 3.99 ----
 Updated the Django script installer to version 1.5.
+If Webmin's BIND module is configured to use the SPF type for Sender Permitted From records, Virtualmin will create both SPF and TXT records for domains.
